--- a/views/_includes/molecules/nav.liquid
+++ b/views/_includes/molecules/nav.liquid
@@ -1,8 +1,8 @@
   <nav class="nav">
-    <a href="./">
+    <a href="/">
       <div class="logo-container">
         <div class="img-wrapper">
-          <img src="./assets/img/logo.png" alt="">
+          <img src="/assets/img/logo.png" alt="">
         </div>
         <span class="text">Deus<br>Machina</span>
       </div>
