--- a/views/_includes/molecules/page-title.liquid
+++ b/views/_includes/molecules/page-title.liquid
@@ -1,9 +1,9 @@
 <div class="page-title">
   <div class="img-wrapper">
-    <img src="./assets/img/dot-text.jpg" alt="">
+    <img src="/assets/img/dot-text.jpg" alt="">
   </div>
   <div class="img-wrapper">
-    <img src="./assets/img/mock.png" alt="">
+    <img src="/assets/img/mock.png" alt="">
   </div>
   <h1 class="text text-5">{{.pageTitle}}</h1>
   <h1 class="text text-4">{{.pageTitle}}</h1>
