--- a/views/_layouts/base.liquid
+++ b/views/_layouts/base.liquid
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> {{title | "Deus Machina"}} </title>
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body class="body">
   {% include ../_includes/molecules/nav %}
