--- a/views/_includes/molecules/nav.liquid
+++ b/views/_includes/molecules/nav.liquid
@@ -7,4 +7,8 @@
         <span class="text">Deus<br>Machina</span>
       </div>
     </a>
+    <ul class="nav-items">
+      <li class="nav__item"><a href="/portfolio">Portfolio</a></li>
+      <li class="nav__item"><a href="/blog">Blog</a></li>
+    </ul>
   </nav>
