--- a/views/_layouts/blog.liquid
+++ b/views/_layouts/blog.liquid
@@ -1,4 +1,8 @@
 ---
 layout: base.liquid
+pageTitle: Blog
 ---
-{{content}}
+{% include molecules/page-header %}
+<div class="container">
+  {{content}}
+</div>
