--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,5 +2,5 @@
 layout: base.liquid
 pageTitle: Deus<br>Machina
 ---
-{% include molecules/page-title %}
+{% include molecules/homepage-header %}
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla dolorem distinctio fugit, excepturi, nihil soluta quos doloribus animi recusandae sed voluptatem, provident fugiat sapiente itaque porro ipsam! Libero, hic.</p>
