--- a/assets/scss/blocks/_b-page-title.scss
+++ b/assets/scss/blocks/_b-page-title.scss
@@ -6,9 +6,21 @@
       max-height: 100vh;
       width: 100vw;
       position: relative;
+      padding-top: 65px;
 
       @include media-breakpoint-up(sm) {
           height: 100vh;
+      }
+
+      &--page {
+          height: 50vh;
+          text-align: center;
+          max-height: 75vh;
+          min-height: 50vh;
+
+          @include media-breakpoint-up(sm) {
+            height: 50vw;
+         }
       }
 
       .text {
@@ -18,6 +30,16 @@
           -webkit-text-stroke: 2px black;
           color: white;
           z-index: 2;
+
+          &--small {
+            text-align: center;
+            font-size:12vw;
+            letter-spacing: 0;
+            margin: 0px auto;
+            left: 0;
+            right: 0;
+            bottom: 10vw;
+          }
       }
 
       .img-wrapper {
@@ -35,11 +57,18 @@
       $count: 7;
 
       @for $i from 0 through $count {
-          .text-#{$i}{
-              transform: translateY(-5vh * $i);
-              opacity: 1;
-          }
+        .text-#{$i}{
+          transform: translateY(-5vh * $i);
+          opacity: 1;
+        }
       }
+
+    //   @for $i from 0 through $count {
+    //     .text-#{$i}.text--small{
+    //       transform: translateY(-2.5vh * $i);
+    //       opacity: 1;
+    //     }
+    //   }
 
       .text-0 {
           color: black;
