--- a/views/_includes/molecules/footer.liquid
+++ b/views/_includes/molecules/footer.liquid
@@ -1,2 +1,4 @@
 <footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.5.11/Rx.js"></script>
+  <script src="/assets/js/all.js"></script>
 </footer>
