--- a/views/_layouts/base.liquid
+++ b/views/_layouts/base.liquid
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body class="body">
-  {% include ../_includes/molecules/nav %}
+  {% include molecules/nav %}
   <main class="main">
     {{ content }}
   </main>
-  {% include ../_includes/molecules/footer %}
+  {% include molecules/footer %}
 </body>
 </html>
