adding page transitions \o/

--- a/views/_layouts/base.liquid
+++ b/views/_layouts/base.liquid
@@ -11,7 +11,7 @@
 </head>
 <body class="body">
   {% include molecules/nav %}
-  <main class="main">
+  <main class="main" data-router-wrapper>
     {{ content }}
   </main>
   {% include molecules/footer %}
