--- a/views/_layouts/blog.liquid
+++ b/views/_layouts/blog.liquid
@@ -2,7 +2,8 @@
 layout: base.liquid
 pageTitle: Blog
 ---
+
+<div class="blog" data-router-view="blog">
 {% include molecules/page-header %}
-<div class="container">
   {{content}}
 </div>
