--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,5 +2,7 @@
 layout: base.liquid
 pageTitle: Deus<br>Machina
 ---
-{% include molecules/homepage-header %}
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla dolorem distinctio fugit, excepturi, nihil soluta quos doloribus animi recusandae sed voluptatem, provident fugiat sapiente itaque porro ipsam! Libero, hic.</p>
+<div class="home" data-router-view="home">
+  {% include molecules/homepage-header %}
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla dolorem distinctio fugit, excepturi, nihil soluta quos doloribus animi recusandae sed voluptatem, provident fugiat sapiente itaque porro ipsam! Libero, hic.</p>
+</div>
