--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,3 +1,3 @@
-@import 'bs-layout';
-@import 'bs-typography';
-@import 'bs-utility';
+@import "bs-layout";
+@import "bs-typography";
+@import "bs-utility";
