--- a/assets/scss/blocks/_b-nav.scss
+++ b/assets/scss/blocks/_b-nav.scss
@@ -1,58 +1,69 @@
 .nav {
   position: absolute;
+  z-index: 3;
   top: 0;
   left: 0;
-  width: 100%;
-  z-index: 3;
-  background-color: white;
-  border-bottom: 1px solid black;
+
   display: flex;
   justify-content: space-between;
 
+  width: 100%;
+
+  border-bottom: 1px solid black;
+  background-color: white;
+
   a {
-    text-decoration: none;
     display: inline-block;
+
+    text-decoration: none;
   }
-  
+
   .text {
     color: black;
   }
 
-  &-items { 
+  &-items {
     display: flex;
     flex-direction: row;
+
     margin-top: auto;
     margin-bottom: auto;
-    padding-right: 40px;
     padding-top: 8px;
+    padding-right: 40px;
   }
 
   &__item {
     display: inline-block;
 
     a {
-      color: palette(default, black);
-      font-weight: 800;
-      font-family: 'Poppins';
-      font-size: 18px;
       position: relative;
+
       overflow: hidden;
+
+      color: palette(default, black);
+
+      font-family: "Poppins";
+      font-size: 18px;
+      font-weight: 800;
       line-height: 1.5;
 
       &:after {
-        content: '';
-        display: block;
-        height: 4px;
-        width: 100%;
         position: absolute;
         top: 50%;
+
+        display: block;
+
+        width: 100%;
+        height: 4px;
+
+        content: "";
+        transition: transform .4s ease;
         transform: translate(-100%, -50%);
+
         background-color: palette(default, black);
-        transition: transform 0.4s ease;
       }
 
       &:hover {
-
         &:after {
           transform: translate(0, -50%);
         }
@@ -68,24 +79,25 @@
 .logo-container {
   display: flex;
   flex-direction: row;
+
   padding: 10px 20px;
 
   .img-wrapper {
     max-width: 50px;
-    display: flex;
     margin-top: auto;
     margin-bottom: auto;
   }
 
   .text {
-    font-family: 'Poppins';
-    font-weight: 800;
-    display: flex;
     margin-top: auto;
     margin-bottom: auto;
-    font-size: 20px;
-    line-height: 0.8;
-    letter-spacing: -0.5px;
     margin-left: 5px;
+
+    letter-spacing: -.5px;
+
+    font-family: "Poppins";
+    font-size: 20px;
+    font-weight: 800;
+    line-height: .8;
   }
 }
