--- a/assets/scss/blocks/_b-page-title.scss
+++ b/assets/scss/blocks/_b-page-title.scss
@@ -2,66 +2,84 @@
   position: relative;
   z-index: 1;
   .page-title {
+    position: relative;
+
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    padding-top: 65px;
+
+    @include media-breakpoint-up(sm) {
+      height: 100vh;
+    }
+
+    &--page {
       height: 50vh;
-      max-height: 100vh;
-      width: 100vw;
-      position: relative;
-      padding-top: 65px;
+      min-height: 50vh;
+      max-height: 75vh;
+
+      text-align: center;
 
       @include media-breakpoint-up(sm) {
-          height: 100vh;
+        height: 50vw;
       }
+    }
 
-      &--page {
-          height: 50vh;
-          text-align: center;
-          max-height: 75vh;
-          min-height: 50vh;
+    .text {
+      position: absolute;
+      z-index: 2;
+      bottom: 0;
 
-          @include media-breakpoint-up(sm) {
-            height: 50vw;
-         }
+      transition: transform .45s cubic-bezier(.770, .000, .175, 1.000);
+
+      color: white;
+
+      @include media-breakpoint-up(sm) {
+        top: auto;
+        bottom: 0;
       }
+      -webkit-text-stroke: 2px black;
 
-      .text {
-          position: absolute;
-          bottom: 0;
-          transition: transform 0.45s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-          -webkit-text-stroke: 2px black;
-          color: white;
-          z-index: 2;
+      &--small {
+        right: 0;
+        bottom: 10vw;
+        left: 0;
 
-          &--small {
-            text-align: center;
-            font-size:12vw;
-            letter-spacing: 0;
-            margin: 0px auto;
-            left: 0;
-            right: 0;
-            bottom: 10vw;
-          }
+        margin: 0 auto;
+
+        text-align: center;
+        letter-spacing: 0;
+
+        font-size: 12vw;
       }
+    }
 
-      .img-wrapper {
-          position: absolute;
-          right: 40px;
-          top: 100px;
-          z-index: 1;
+    .img-wrapper {
+      position: absolute;
+      z-index: 1;
+      top: 38%;
+      right: -5vw;
 
-          img {
-              width: 40vw;
-              height: auto;
-          }
-      }
-      
-      $count: 7;
+      transform: translateY(-50%);
 
-      @for $i from 0 through $count {
-        .text-#{$i}{
-          transform: translateY(-5vh * $i);
-          opacity: 1;
+      img {
+        width: 90vw;
+        height: auto;
+
+        @include media-breakpoint-up(md) {
+          width: 40vw;
         }
       }
+    }
+
+    $count: 7;
+
+    // @for $i from 0 through $count {
+    //   .text-#{$i} {
+    //     transform: translateY(-5vh * $i);
+    //     opacity: 1;
+    //   }
+    // }
 
     //   @for $i from 0 through $count {
     //     .text-#{$i}.text--small{
@@ -70,37 +88,43 @@
     //     }
     //   }
 
-      .text-0 {
-          color: black;
+
+    .text-0 {
+      color: black;
+    }
+
+
+    span, h1 {
+      flex-grow: 0;
+
+      letter-spacing: -1vw;
+
+      font-family: "Poppins";
+      font-size: 23vw;
+      font-weight: 800;
+      line-height: .85;
+    }
+
+    &:hover {
+      .text {
+        transform: translateY(0);
       }
+    }
 
+    &--center {
+      text-align: center;
 
-      span, h1 {
-          font-size:23vw;
-          font-family: 'Poppins';
-          font-weight: 800;
-          line-height: 0.85;
-          letter-spacing: -1vw;
-          flex-grow: 0;
+      .text {
+        top: 45%;
+        right: 0;
+        left: 0;
+
+        margin: 0 auto;
+
+        letter-spacing: 0;
+
+        font-size: 20vw;
       }
-
-      &:hover {
-          .text{
-              transform: translateY(0);
-          }
-      }
-
-      &--center {
-          text-align: center;
-
-          .text { 
-              letter-spacing: 0;
-              left: 0;
-              right: 0;
-              margin: 0px auto;
-              font-size:20vw;
-              top:45%;
-          }
-      }
+    }
   }
 }
