--- a/views/_includes/molecules/homepage-header.liquid
+++ b/views/_includes/molecules/homepage-header.liquid
@@ -1,7 +1,51 @@
+<script id="vertexShader" type="x-shader/x-vertex">
+  void main() {
+    gl_Position = vec4( position, 1.0 );
+}
+</script>
+<script id="fragmentShader" type="x-shader/x-fragment">
+  #ifdef GL_ES
+precision mediump float;
+#endif
+
+#define PI 3.14159265359
+#define TWO_PI 6.28318530718
+
+uniform vec2 u_resolution;
+uniform vec2 u_mouse;
+uniform float u_time;
+
+// Reference to
+// http://thndl.com/square-shaped-shaders.html
+
+void main(){
+  vec2 uv = (gl_FragCoord.xy-.5*u_resolution.xy)/u_resolution.y;
+  vec3 col = vec3(0);
+
+  vec2 gv = fract( uv * 40. );
+  vec2 id = floor( uv * 40. );
+
+  float m = 0.;
+  float t = u_time / 3.;
+
+  for(float y=-1.; y<=1.; y++) {
+      for(float x=-1.; x<=1.; x++){
+          vec2 offs = vec2(x, y);
+          float dist = length(id+offs)*-.3;
+          float d = length(gv-offs);
+          float r = mix(.1, .43, sin(t+dist) * .5 +.5);
+          m += smoothstep(r, r*.9, d);
+      }
+  }
+
+  col.rgb = vec3(1,1,1);
+  col += -m;
+
+  gl_FragColor = vec4(col, 1.0);
+}
+</script>
 <div class="page-title">
-  <div class="img-wrapper">
-    <img src="/assets/img/dot-text.jpg" alt="">
-  </div>
+  <div id="container"></div>
   <div class="img-wrapper">
     <img src="/assets/img/mock.png" alt="">
   </div>
