--- a/views/portfolio/portfolio-1.liquid
+++ b/views/portfolio/portfolio-1.liquid
@@ -1,5 +1,5 @@
 ---
-project_title: Project 1
+pageTitle: Project 1
 project_blurb: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, accusantium. Rem officia ab consequatur consectetur quisquam excepturi repellendus, odio provident! Vitae magni similique sint debitis unde, molestiae error possimus architecto.
 project_teaser_image: https://www.w3schools.com/w3css/img_snowtops.jpg
 ---
