--- a/assets/scss/settings/_s-colors.scss
+++ b/assets/scss/settings/_s-colors.scss
@@ -1,8 +1,8 @@
 // Color palettes
 $palettes: (
     default: (
-        white: #efefef,
-        black: #252525,
+        white: #f0f0f0,
+        black: #161616,
     ),
     brand: (
         navy: #232e5c,
