--- a/views/_includes/molecules/homepage-header.liquid
+++ b/views/_includes/molecules/homepage-header.liquid
@@ -47,7 +47,7 @@ void main(){
 <div class="page-title">
   <div id="container"></div>
   <div class="img-wrapper">
-    <img src="/assets/img/mock.png" alt="">
+    <img src="/assets/img/logo.png" alt="">
   </div>
   <h1 class="text text-5">{{.pageTitle}}</h1>
   <h1 class="text text-4">{{.pageTitle}}</h1>
