--- a/assets/scss/blocks/_b-nav.scss
+++ b/assets/scss/blocks/_b-nav.scss
@@ -10,7 +10,7 @@
   width: 100%;
 
   border-bottom: 1px solid palette(default, black);
-  background-color: white;
+  background-color: palette(default, white);
 
   a {
     display: inline-block;
