--- a/assets/scss/blocks/_blocks.scss
+++ b/assets/scss/blocks/_blocks.scss
@@ -3,6 +3,8 @@
 @import "b-page-title";
 @import "b-project";
 @import "b-triangle";
+@import "b-principles";
 @import "b-footer";
 @import "b-form";
 @import "b-wysiwyg";
+@import "b-shaders";
