--- a/views/_includes/molecules/homepage-header.liquid
+++ b/views/_includes/molecules/homepage-header.liquid
@@ -1,9 +1,9 @@
-<script id="vertexShader" type="x-shader/x-vertex">
+<script id="vertexShader1" type="x-shader/x-vertex">
   void main() {
     gl_Position = vec4( position, 1.0 );
 }
 </script>
-<script id="fragmentShader" type="x-shader/x-fragment">
+<script id="fragmentShader1" type="x-shader/x-fragment">
   #ifdef GL_ES
 precision mediump float;
 #endif
@@ -45,7 +45,7 @@ void main(){
 }
 </script>
 <div class="page-title">
-  <div id="container"></div>
+  <div id="container1"></div>
   <div class="img-wrapper">
     <img src="/assets/img/logo.png" alt="">
   </div>
