--- a/views/index.liquid
+++ b/views/index.liquid
@@ -4,5 +4,30 @@ pageTitle: Deus<br>Machina
 ---
 <div class="home" data-router-view="home">
   {% include molecules/homepage-header %}
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla dolorem distinctio fugit, excepturi, nihil soluta quos doloribus animi recusandae sed voluptatem, provident fugiat sapiente itaque porro ipsam! Libero, hic.</p>
+  <div class="container">
+    <div class="row block">
+      <div class="col col-xs-12 col-md-8 col-md-offset-2">
+        <div class="canvas">
+          <div class="inner"></div>
+        </div>
+        <h1 class="block__title">Build</h1>
+      </div>
+    </div>
+    <div class="row block">
+      <div class="col col-xs-12 col-md-8 col-md-offset-2">
+        <div class="canvas">
+          <div class="inner"></div>
+        </div>
+        <h1 class="block__title">Paint</h1>
+      </div>
+    </div>
+    <div class="row block">
+      <div class="col col-xs-12 col-md-8 col-md-offset-2">
+        <div class="canvas">
+          <div class="inner"></div>
+        </div>
+        <h1 class="block__title">Explore</h1>
+      </div>
+    </div>
+  </div>
 </div>
