--- a/views/_includes/molecules/footer.liquid
+++ b/views/_includes/molecules/footer.liquid
@@ -1,3 +1,10 @@
 <footer>
-  <script src="/assets/js/all.js"></script>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <span>&copy; Deus Machina LTD {{ "now" | date:"%Y"}}</span>
+      </div>
+    </div>
+  </div>
 </footer>
+<script src="/assets/js/all.js"></script>
